--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -9,6 +10,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "iview": "^2.4.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "style-loader": "^0.18.2",
     "vue": "^2.4.4",
@@ -24,7 +26,7 @@
   "version": "1.0.0",
   "dependencies": {},
   "scripts": {
-    "server": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --env=dev",
+    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --env=dev",
     "build": "webpack  --env=prod"
   },
   "author": "yanle",
